# rwa-chainlink-convergence

./: .env_sample  .gitignore  Makefile  README.md  README_ARCHITECTURE.md  README_TENDERLY.md  README_THIRDWEB.md  README_WORLD_ID.md  foundry.toml  go.mod  go.sum  project.yaml  project_template.yaml  secrets.yaml
auto-lock-defi/: .env_sample  README.md  config.staging.json  go.mod  go.sum  main.go  workflow.yaml
auto-lock-defi/contracts/evm/src/abi/: VehicleTokenConsumer.abi
contracts/: README.md
contracts/evm/script/: DeployVehicleConsumer.s.sol  DeployVehicleNFT.s.sol  TransferOwnership.s.sol
contracts/evm/src/: VehicleNFT.sol
contracts/evm/src/evm/: IReceiver.sol  ReceiverTemplate.sol  VehicleNFT.sol  VehicleTokenConsumer.sol
event-listener/: Cargo.toml  README.md
event-listener/src/: main.rs
frontend/: .gitignore  .sample_env.local  README_FRONTEND.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/rp-signature/: route.ts
frontend/src/app/api/tokenize/: route.ts
frontend/src/app/tokenize/: page.tsx
frontend/src/components/: AnimatedSection.tsx  Architecture.tsx  Hero.tsx  HowItWorks.tsx  LogoCarousel.tsx  Navbar.tsx  Partners.tsx  PoweredBy.tsx  Providers.tsx  Section.tsx  TokenizationForm.tsx  VerifyButton.tsx  WhyAutoLock.tsx
frontend/src/components/tokenize/: Pipeline.tsx  TokenFormStep.tsx  TokenProgressStep.tsx  TokenSuccessStep.tsx  TokenizationModal.tsx
mocks/: README.md  go.mod  main.go
worker/: README.md  go.mod  main.go
(+1 files in other folders)
